[tool.poetry]
name = "preparingaspeech"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transliterate = "^1.10.2"
lorem-ipsum-generator = "^0.3"
num2words = "^0.5.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
